refactor(kafka): improve code style and optimize imports
The changes in this commit are focused on improving the code style and optimizing imports across multiple files in the Kafka module.

Specifically, the following improvements were made:

- Removed unnecessary imports and organized existing ones to enhance readability.
- Replaced `.stream().collect(Collectors.toList())` with `.toList()` for conciseness and improved performance, leveraging Java 16+ features.
- Removed redundant comments that didn't add significant value to the code understanding.
- Improved code formatting and organization for better clarity.
- Updated the `User` entity to explicitly define `hashCode` and `equals` methods, ensuring proper object comparison and behavior in collections.
- Removed the `@EqualsAndHashCode` annotation from the `User` entity as it's now handled manually.
- Added explicit type parameters to the `ConcurrentKafkaListenerContainerFactory` bean for better type safety.
- Removed an unused comment related to `@ConfigurationProperties` in `KafkaPropertiesConfig`.

These changes aim to enhance the overall quality and maintainability of the codebase by adhering to best practices and improving code clarity.