@@ -1,16 +1,14 @@
 package ru.t1.demo.kafka.controller;
 
-import java.util.List;
-import java.util.stream.Collectors;
-
+import lombok.RequiredArgsConstructor;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-
-import lombok.RequiredArgsConstructor;
 import ru.t1.demo.kafka.dto.UserDto;
 import ru.t1.demo.kafka.service.UserService;
 import ru.t1.demo.kafka.util.UserMapper;
+
+import java.util.List;
 
 @RestController
 @RequestMapping("api/v1/users")
@@ -28,7 +26,7 @@ public class UserController {
     public List<UserDto> getRegisteredUsers() {
         return userService.getRegisteredUsers().stream()
                 .map(UserMapper::toDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
 }
